k8s/media/jellyseerr/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        # We run as mediaowner for consistency, though it's less critical here
        runAsUser: 1302
        runAsGroup: 1302
        fsGroup: 1302
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:sha-9ca63ba
          ports:
            # Jellyseerr's default port is 5055
            - containerPort: 5055
          volumeMounts:
            # Mount Jellyseerr's private config storage
            - name: config-storage
              mountPath: /app/config
            # Mount the media storage at /media
            - name: data-storage
              mountPath: /data
      volumes:
        - name: config-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/config/jellyseerr
        # This is direct NFS mount for sharing data across multiple namespace. Not neeed but still there
        - name: data-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/contents/public
