k8s/media/jellyseerr/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
