k8s/media/jellyseerr/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyseerr.localdev`)
      kind: Rule
      services:
        - name: jellyseerr-service
          port: 5055
